# CI-pipeline_project

./: .gitignore  LICENSE  Präsentation1.pptx  README.md  backup_files.py  bdivfree.py  biotsavart.inp  biotsavart.py  biotsavart_asdex.py  call_graph.drawio  check_against_golden_record.py  compare_times.py  field.h5  field.nc  grid.py  grid_file  plot_coils.py  plot_modes.py  presentation_CI-pipeline.pptx  pyproject.toml  reference_solutions.py  requirements.txt  requirements_ubuntu.txt  test_biotsavart.py  test_fourier.py  vvn_asdex.py  worst_practice.drawio
.github/: github-actions.yml
.github/workflows/: github-actions.yml  github-actions_artifacts.yml  setup_python.yml
docs/: act.md
python_performance/divisors/: divisors_concurrent.py  divisors_multiprocessing.py  divisors_numba.py  divisors_simple.py  main.py
python_performance/fibonacci/: check_sequence.py  fib_numba.py  fib_simple.py  main.py
src/biotsavart_modes/: test.py
src/biotsavart_modes/biotsavart/: biotsavart.py  compare_times.py
src/biotsavart_modes/helpers/: grid.py
src/biotsavart_modes/output/: field.h5  field.nc
src/biotsavart_modes/plotting/: plot_coils.py  plot_modes.py
testing_intro/fixtures/: test_write_and_read.py  write_and_read.py
testing_intro/parametrized_testing/: main.py
testing_intro/parametrized_testing/numericalIntegration/: integrationMethods.py
testing_intro/parametrized_testing/testNumericalIntegration/: test_boole.py  (+3 more)
tests/: check_against_golden_record.py  test.py  test_biotsavart.py  test_fourier.py
tests/helpers/: backup_files.py  reference_solutions.py
