[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biotsavart_modes"
packages = [{include = "biotsavart_modes", from="src"}]
version = "0.0.1"
description = "A package to calculate the magnetic field for a given coil geometry and current using Biot-Savart's law."
authors = ["Haberz D.", "Rinner C."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
h5py = "*"
matplotlib = "*"
netCDF4 = "*"
numba = "*"
numpy = "*"
pytest = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
